fixed small issue with footer overlapping content

--- a/CSS dev/main.css
+++ b/CSS dev/main.css
@@ -118,7 +118,7 @@ header {
 }
 
 footer {
-  position: fixed;
+  position: relative;
   bottom: 0px;
   left: 0px;
   width: 100%;
